--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <version>11.2.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
