day2 is completed

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,6 @@
-dbUrl = "jdbc:oracle:thin:@3.84.129.57:1521:xe";
-dbUsername = "hr";
-dbPassword = "hr";
+dbUrl=jdbc:oracle:thin:@3.84.129.57:1521:xe
+dbUsername=hr
+dbPassword=hr
+
+baseurl=http://54.162.203.9:8000/api/spartans
+baseurlforords=http://54.162.203.9:1000/ords/hr
