final changes are done

--- a/configuration.properties
+++ b/configuration.properties
@@ -4,3 +4,4 @@ dbPassword=hr
 
 baseurl=http://54.162.203.9:8000/api/spartans
 baseurlforords=http://54.162.203.9:1000/ords/hr
+bookit=https://cybertek-reservation-api-qa3.herokuapp.com
